# python-pinballmap

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
pinballmap/: __init__.py  __main__.py  auth.py  cli.py  client.py  constants.py  exceptions.py  name_matching.py  utilities.py
requirements/: base.txt  dev.txt
tests/: __init__.py
