[tool.poetry]
name = "python-pinballmap"
version = "0.3.5"
description = "Python client for the Pinball Map API"
authors = ["Duna Csandl <marinas.bobble-05@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"

requests = "^2.27.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
bump2version = "^1.0.1"
ipython = "^7.31.0"
jupyter = "^1.0.0"
pytest = "^6.2.5"
Sphinx = "^4.3.2"
twine = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
